--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,6 +39,8 @@
 					          <option value="admin">Admin</option>
 						</select>
 						  <button type="submit" class="btn btn-default">Sign in</button>
+						  						<%= link_to "Forget Password", new_user_password_path %>
+
 						</form>
 					</div>
 					
