--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
 					          <option value="admin">Admin</option>
 						</select>
 						  <button type="submit" class="btn btn-default">Sign in</button>
-						  						<%= link_to "Forget Password", new_user_password_path %>
+						  						<%= link_to "Forgot Password", new_user_password_path %>
 
 						</form>
 					</div>
