--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
 							</div>
 
 						  <div class="form-group">
-                                                     <input type="email" name= 'user[email]'class="form-control input-sm" placeholder="Enter email" style="height:30px">
+                                                     <input type="email" name= 'user[email]'class="form-control input-sm" placeholder="Enter email" >
 						  </div>
 						  <div class="form-group">
 							<input type="password" name='user[password]' class="form-control input-sm" placeholder="Password" style="height:30px">
