--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,7 +25,7 @@
           <div class="col-md-16 col-md-offset-1">
             <table class="table table-striped box-border">
               <thead class="box-head" >
-                  <tr><td colspan="2"><p><strong>Purposeful Parenting 101 &trade; Workshop</strong></p></tr>
+                  <tr><td colspan="2"><p><strong><%= @event.title %></strong></p></tr>
               </thead>
               <tbody>
                 <tr><td colspan="2"><strong>Description:</strong></td></tr>
@@ -42,7 +42,7 @@
                 <tr><td colspan="2"><strong>Host Name:</strong></td></tr>
                 <tr><td colspan="2">  <%= @event.user.uname %> <%= @event.user.last_name %>
 </td></tr>
-                <tr><td colspan="2">
+
 <tr>
        <% if current_user.is_registered?(@event) %>
          <td colspan="2"><%= link_to 'Registered','#',class: "disabled btn-sm new "%></td>
