--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,9 +46,9 @@
 					<!-- <div class="clearfix"></div> -->
 					<nav class="main-nav">
 						<ul class="nav-pills">
-							<li><a href="#" class="selected">THE EC</a></li>
+							<li><a href="/home" class="selected">THE EC</a></li>
 							<li><%= link_to "ABOUT",about_us_path %></li>
-							<li><a href="#">REGISTER</a></li>
+							<li><a href="/users/sign_up">REGISTER</a></li>
 							<li><a href="#">CONTACT</a></li>
 							<li><a href="#">EVENTS</a></li>
 						</ul>
