--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,9 +15,9 @@
 				<div class="col-md-12">
 					<nav class="footer-nav">
 						<ul class="nav-pills pull-right">
-							<li><a href="#">THE EC</a></li>
-							<li><a href="html/about.html">ABOUT</a></li>
-							<li><a href="#">REGISTER</a></li>
+							<li><a href="/home">THE EC</a></li>
+							<li><%= link_to "ABOUT",about_us_path %></li>
+							<li><a href="/users/sign_up">REGISTER</a></li>
 							<li><a href="#">CONTACT</a></li>
 							<li><a href="#">EVENTS</a></li>
 						</ul>
