--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -190,7 +190,7 @@
               <div class="signup pull-left form-inline">
                <!--  <form class="form-inline" role="form"> -->
               <div class="form-group">
-         <%= recaptcha_tags :public_key => '6LcjSPASAAAAALaO83IC9IX7TfvdYGN2vGs6sjIZ' %>
+         <%#= recaptcha_tags :public_key => '6LcjSPASAAAAALaO83IC9IX7TfvdYGN2vGs6sjIZ' %>
               </div>            
               <button type="submit" class="btn btn-default">Submit</button>
          <!--    </form> -->
