--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,5 @@
  *= require dataTables/src/demo_table_jui
  *= require bootstrap_and_overrides
  *= require home/bootstrap
+ *= require home/mainpage/main-index
  */
