--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,16 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= stylesheet_link_tag 'home/mainpage/main-index'%>
+
+ 
+<ul>
+  <% @user.errors.full_messages.each do |msg,name| %>
+  <div class="alert alert-<%= name.to_s == 'notice' ? "success" : "danger" %>">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>  
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    </div>
+  <% end %>
+</ul>
 </head>
 <body>
 	<header>
@@ -48,7 +58,7 @@
 						<ul class="nav-pills">
 							<li><a href="/home" class="selected">THE EC</a></li>
 							<li><%= link_to "ABOUT",about_us_path %></li>
-				<li><a href="users/sign_up">REGISTER</a></li>
+				<li><a href="/users/sign_up">REGISTER</a></li>
 							<li><a href="#">CONTACT</a></li>
 							<li><a href="#">EVENTS</a></li>
 						</ul>
