change the datasource path

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
 
 				
 
-<table id="events_registered" class="table table-striped box-border table-main display" data-source="<%= events_registered_url(format: "json") %>" style="display:none">
+<table id="events_registered" class="table table-striped box-border table-main display" data-source="/events_registered.json" style="display:none">
   <thead>
     <tr>
       <th>Title</th>
@@ -94,7 +94,7 @@
 						 </table>
 
 
-						<table id="events_running" class="table table-striped box-border table-main display" data-source="<%= current_events_url(format: "json") %>" style="display:none">
+						<table id="events_running" class="table table-striped box-border table-main display" data-source="/current_events.json" style="display:none">
  									 <thead>
    										 <tr>
     									  <th>Title</th>
