--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,12 +8,14 @@
 
  
 <ul>
+<% if @user!=nil %>	
   <% @user.errors.full_messages.each do |msg,name| %>
   <div class="alert alert-<%= name.to_s == 'notice' ? "success" : "danger" %>">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>  
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
     </div>
   <% end %>
+<%end%>  
 </ul>
 </head>
 <body>
