--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,19 @@
 
 <head>
-<meta charset = "UTF-8">
-<title>Event Circle - Dashboard</title>
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<%= stylesheet_link_tag 'home/mainpage/main-index'%>
 
- 
-<ul>
+    <%= stylesheet_link_tag "home/mainpage/main-index" %>
+
 	<% if @user %>
+	
   <% @user.errors.full_messages.each do |msg,name| %>
   <div class="alert alert-<%= name.to_s == 'notice' ? "success" : "danger" %>">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>  
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
     </div>
     <% end %>
+    
   <% end %>
-</ul>
+
 </head>
 <body>
 	<header>
@@ -38,7 +35,7 @@
 							</div>
 
 						  <div class="form-group">
-                                                     <input type="email" name= 'user[email]'class="form-control input-sm" placeholder="Enter email" >
+                                                     <input type="email" name= 'user[email]'class="form-control input-sm" placeholder="Enter email" style="height:30px" >
 						  </div>
 						  <div class="form-group">
 							<input type="password" name='user[password]' class="form-control input-sm" placeholder="Password" style="height:30px">
